AI tweaks
Co-authored-by: Copilot <copilot@github.com>